# historian

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  settings.yaml
alembic/: env.py
alembic/versions/: 175028c54b0e_create_import_jobs_table.py  1e18d103822a_create_ticks_table.py  7acc051d3b05_create_instruments_table.py  7bd4f4fd49c6_create_mt5_rates_table.py  b867ab5b92ed_create_import_job_chunks_table.py  cf0aabc1ae7c_create_mt5_ticks_table.py  e73b59bd1ecb_create_sources_table.py
core/database/repository/: candles.py  symbols.py  ticks.py
core/model/: candle.py
historian/: __init__.py  config.py  database.py  main.py
historian/core/database/: config.py
historian/core/database/repository/: candles.py  symbols.py  ticks.py
historian/core/model/: symbol.py  tick.py
historian/loader/: __init__.py  import_manager.py  job.py  models.py  router.py  service.py  terminals_client.py
historian/provider/: router.py  terminals_client.py
historian/routers/: history.py
historian/storage/: __init__.py  models.py  service.py
migrations/versions/: 03d72b6a80fb_create_candles_table.py
tests/provider/: test_service.py
