[tool.poetry]
name = "historian"
version = "0.0.1"
description = "Historical data management"
authors = ["Your Name <you@example.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.10.2"
dynaconf = "^3.1.12"
fastapi = "^0.93.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.5.post1"
pydantic = "^1.10.6"
uvicorn = "^0.21.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
